<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_selected"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="500"
        android:title="@string/mo_action_delete_selected"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/upload_selected"
        android:icon="@drawable/ic_action_file_upload"
        android:orderInCategory="400"
        android:title="@string/mo_action_upload_selected"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_note_to_selected"
        android:icon="@drawable/ic_action_label_outline"
        android:orderInCategory="300"
        android:title="@string/mo_action_add_note_to_selected"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="1000"
        android:title="@string/mo_action_select_all"
        app:showAsAction="always"/>

</menu>
